# solbot

./: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  BIRDEYE_IMPLEMENTATION_PLAN.md  BIRDEYE_LLM_INTEGRATION.md  BIRDEYE_PERSISTENCE.md  COINGECKO_BACKFILL_PLAN.md  COINGECKO_RESEARCH_FINDINGS.md  CRITIQUE.md  DECISIONS.md  DEPLOYMENT.md  EXECUTOR_POSITION_MANAGER_CRITIQUE.md  EXECUTOR_POSITION_MANAGER_PLAN.md  METHODOLOGY.md  MULTI_USER_ARCHITECTURE.md  PLANNING.md  PROGRESS.md  SESSION_SUMMARY.md  TEST_ANALYSIS.md  TRADING_STRATEGY_ANALYSIS.md
migrations/: 003_discovery_schema_multiuser.sql  004_add_decimals_to_tracked_tokens.sql  005_add_token_rotation.sql  006_adaptive_rsi.sql  20240101000001_create_users_table.sql  20240101000002_create_positions_table.sql
scripts/: README.md  backfill_all_tokens.sh  import_csv_to_redis.sh
src/: lib.rs  main.rs
src/api/: birdeye.rs  coingecko.rs  dexscreener.rs  jupiter.rs  mod.rs
src/backfill/: converter.rs  mod.rs  validator.rs
src/backtest/: metrics.rs  mod.rs  runner.rs  synthetic.rs
src/db/: mod.rs  postgres.rs
src/discovery/: safety.rs
src/execution/: candle_buffer.rs  executor.rs  mod.rs  position_manager.rs  price_feed.rs
src/indicators/: adx.rs  atr.rs  market_analysis.rs  mod.rs  moving_average.rs  rsi.rs
src/llm/: mod.rs
src/models/: mod.rs
src/persistence/: mod.rs
src/regime/: detector.rs  llm_detector.rs  mod.rs  strategy_selector.rs
src/risk/: circuit_breakers.rs  mod.rs
tests/: e2e_test.rs
(+6 files in other folders)
