[package]
name = "cryptobot"
version = "0.1.0"
edition = "2021"
default-run = "cryptobot"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate", "rust_decimal"] }
rust_decimal = "1.36"

# Cache / Persistence
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Technical analysis
yata = "0.7"

# Random number generation (for backtesting)
rand = "0.8"

# Rate limiting
governor = "0.6"

# CLI
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
# Testing
mockito = "1.6"
tokio-test = "0.4"
